added index.html, wrote header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Grepawksed!</title>
     <!--
@@ -21,22 +21,5 @@
                 <button type="submit">Sign In</button>
             </form>
     </header>
-    <main>
-        <!-- Need 4 text boxes -->
-        <form>
-                <label for="command">Grep, Awk, Sed commands</label>
-                <input id="command" name="command" type="text"></input>
-                <label for="stdin">STDIN</label>
-                <textarea id="stdin" name="stdin"></textarea>
-        </form>
-        <label for="stdout">STDOUT</label>
-        <textarea id="stdout" name="stdout"></textarea>
-        <label for="stderr">STDERR</label>
-        <textarea id="stderr" name="stderr"></textarea>
-    </main>
-    <footer>
-        <p>Author: Lars Tracy</p>
-        <a href="https://github.com/Aon-Sao/startup-260">GitHub</a>
-    </footer>
 </body>
 </html>
