--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
                 <button type="submit">Sign In</button>
             </form>
     </header>
+    <footer>
+        <p>Author: Lars Tracy</p>
+        <a href="https://github.com/Aon-Sao/startup-260">GitHub</a>
+    </footer>
 </body>
 </html>
