--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <label class="form-label" for="login-btn">&ZeroWidthSpace;Sign in to save commands and see WebSocket stuff</label>
                         </figcaption>
                         <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
-                        <button class="col btn btn-dark" type="submit">Save command</button>
+                        <button class="col btn btn-dark" id="save-command-btn" type="submit">Save command</button>
                         <span class="col">Current user: lorem ipsum</span>
                     </figure>
             </form>
@@ -40,9 +40,9 @@
             <div class="row">
                 <figure class="col">
                     <figcaption>
-                        <label class="form-label" for="command">Grep, Awk, Sed commands</label>
+                        <label class="form-label" for="command-input">Grep, Awk, Sed commands</label>
                     </figcaption>
-                    <textarea class="form-control text-white bg-dark" rows="1" id="command" name="command"></textarea>
+                    <textarea class="form-control text-white bg-dark" rows="1" id="command-input" name="command"></textarea>
                 </figure>
             </div>
             <div class="row">
