--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Grepawksed!</title>
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script defer src="login.js"></script>
     </head>
     <body class="vh-100 container text-white bg-dark bg-gradient">
         <header class="row container">
@@ -12,7 +13,7 @@
                 <img class="col" src="site_logo.svg" alt="A pipe labeled grep, awk, sed"/>
             </div>
             <!-- Sign in form here -->
-            <form class="col container">
+            <div class="col container">
                     <figure class=col>
                         <figcaption>
                             <label class="form-label" for="username">Username</label>
@@ -31,9 +32,9 @@
                         </figcaption>
                         <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
                         <button class="col btn btn-dark" id="save-command-btn" type="submit">Save command</button>
-                        <span class="col">Current user: lorem ipsum</span>
+                        <span class="col" id="current-user-display" >Current user: lorem ipsum</span>
                     </figure>
-            </form>
+            </div>
         </header>
         <main class="row container">
             <!-- Need 4 text boxes -->
