leveraged the localstorage API

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </figcaption>
                         <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
                         <button class="col btn btn-dark" id="save-command-btn" type="submit">Save command</button>
-                        <span class="col" id="current-user-display" >Current user: lorem ipsum</span>
+                        <span class="col" id="current-user-display" >Current user: signed out</span>
                     </figure>
             </div>
         </header>
