--- a/public/saved.html
+++ b/public/saved.html
@@ -5,7 +5,7 @@
         <title>Grepawksed!</title>
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script defer type="module" src="index.js"></script>
+        <script defer type="module" src="saved.js"></script>
         <script defer src="login.js"></script>
     </head>
     <body class="container text-white bg-dark bg-gradient">
@@ -14,7 +14,7 @@
             <img class="col" src="site_logo.svg" alt="A pipe labeled grep, awk, sed"/>
         </div>
         <!-- Sign in form here -->
-        <form class="col container">
+        <div class="col container">
             <figure class=col>
                 <figcaption>
                     <label class="form-label" for="username">Username</label>
@@ -32,16 +32,16 @@
                     <label class="form-label" for="login-btn">&ZeroWidthSpace;Sign in to save commands and see WebSocket stuff</label>
                 </figcaption>
                 <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
-                <button class="col btn btn-dark" type="submit">Save command</button>
+                <button class="col btn btn-dark" id="refresh-btn" type="submit">Refresh List</button>
                 <span class="col">Current user: lorem ipsum</span>
             </figure>
-        </form>
+        </div>
     </header>
         <main>
             <div>
                 <figure>
                     <figcaption>My Saved Commands | Only available if signed in</figcaption>
-                    <ul>
+                    <ul id="personal-saved-list">
                         <li>
                             <div class="card text-white bg-dark">
                                 <div class="card-body">
@@ -79,7 +79,7 @@
                 </figure>
                 <figure>
                     <figcaption>Public Commands</figcaption>
-                    <ul>
+                    <ul id="public-saved-list">
                         <li>
                             <div class="card text-white bg-dark">
                                 <div class="card-body">
