added Chuch Norris joke

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
             </div>
         </header>
         <main class="row container">
+            <div class="row">
+              <p id="joke-text" class="col">Third party Chuck Norris joke goes here</p>
+            </div>
             <!-- Need 4 text boxes -->
             <div class="row">
                 <figure class="col">
