--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script defer type="module" src="index.js"></script>
-        <script defer src="login.js"></script>
+        <!-- <script defer src="login.js"></script> -->
     </head>
     <body class="vh-100 container text-white bg-dark bg-gradient">
         <header class="row container">
@@ -32,8 +32,8 @@
                             <label class="form-label" id="websocket-zone" for="login-btn">&ZeroWidthSpace;Sign in to save commands and see WebSocket stuff</label>
                         </figcaption>
                         <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
-                        <button class="col btn btn-dark" id="save-command-btn" type="submit">Save command</button>
-                        <span class="col" id="current-user-display" >Current user: signed out</span>
+                        <button class="col btn btn-dark" id="new-user-btn" type="submit">Create Account</button>
+                         <span class="col" id="current-user-display" >Current user: signed out</span>
                     </figure>
             </div>
         </header>
@@ -78,6 +78,9 @@
                 <a class="col" href="saved.html">
                     <button class="btn btn-dark">Go to saved</button>
                 </a>
+                <div class="col">
+                  <button class="btn btn-dark" id="save-command-btn" type="submit">Save command</button>
+                </div>
             </div>
             <div class="row">
                 <p class="col">Author: Lars Tracy</p>
