--- a/public/saved.html
+++ b/public/saved.html
@@ -6,37 +6,37 @@
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script defer type="module" src="saved.js"></script>
-        <script defer src="login.js"></script>
+        <script defer src="index.js"></script>
     </head>
     <body class="container text-white bg-dark bg-gradient">
-    <header class="row container">
-        <div class="col">
-            <img class="col" src="site_logo.svg" alt="A pipe labeled grep, awk, sed"/>
-        </div>
-        <!-- Sign in form here -->
-        <div class="col container">
-            <figure class=col>
-                <figcaption>
-                    <label class="form-label" for="username">Username</label>
-                </figcaption>
-                <input class="form-control text-white bg-dark" id="username" name="username" type="text" required ></input>
-            </figure>
-            <figure class="col">
-                <figcaption>
-                    <label class="form-label" for="password">Password</label>
-                </figcaption>
-                <input class="form-control text-white bg-dark" id="password" name="password" type="password" required ></input>
-            </figure>
-            <figure class="col container">
-                <figcaption>
-                    <label class="form-label" for="login-btn">&ZeroWidthSpace;Sign in to save commands and see WebSocket stuff</label>
-                </figcaption>
-                <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
-                <button class="col btn btn-dark" id="refresh-btn" type="submit">Refresh List</button>
-                <span class="col">Current user: lorem ipsum</span>
-            </figure>
-        </div>
-    </header>
+        <header class="row container">
+            <div class="col">
+                <img class="col" src="site_logo.svg" alt="A pipe labeled grep, awk, sed"/>
+            </div>
+            <!-- Sign in form here -->
+            <div class="col container">
+                    <figure class=col>
+                        <figcaption>
+                            <label class="form-label" for="username">Username</label>
+                        </figcaption>
+                        <input class="form-control text-white bg-dark" id="username" name="username" type="text" required ></input>
+                    </figure>
+                    <figure class="col">
+                        <figcaption>
+                            <label class="form-label" for="password">Password</label>
+                        </figcaption>
+                        <input class="form-control text-white bg-dark" id="password" name="password" type="password" required ></input>
+                    </figure>
+                    <figure class="col container">
+                        <figcaption>
+                            <label class="form-label" id="websocket-zone" for="login-btn">&ZeroWidthSpace;Sign in to save commands and see WebSocket stuff</label>
+                        </figcaption>
+                        <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
+                        <button class="col btn btn-dark" id="new-user-btn" type="submit">Create Account</button>
+                         <span class="col" id="current-user-display" >Current user: signed out</span>
+                    </figure>
+            </div>
+        </header>
         <main>
             <div>
                 <figure>
@@ -119,9 +119,12 @@
         </main>
         <footer class="row container">
             <div class="row">
-                <a class="col" href="index.html">
-                    <button class="btn btn-dark">Go to repl</button>
+                <a class="col" href="saved.html">
+                    <button class="btn btn-dark">Go to saved</button>
                 </a>
+                <div class="col">
+                  <button class="btn btn-dark" id="save-command-btn" type="submit">Save command</button>
+                </div>
             </div>
             <div class="row">
                 <p class="col">Author: Lars Tracy</p>
