--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
         <title>Grepawksed!</title>
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script defer type="module" src="index.js"></script>
-        <!-- <script defer src="login.js"></script> -->
+        <script defer src="login.js"></script>
+        <script defer src="ws.js"></script>
+        <script defer src="repl.js"></script>
+        <script defer src="joke.js"></script>
     </head>
     <body class="vh-100 container text-white bg-dark bg-gradient">
         <header class="row container">
