--- a/public/saved.html
+++ b/public/saved.html
@@ -5,8 +5,9 @@
         <title>Grepawksed!</title>
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script defer type="module" src="saved.js"></script>
-        <script defer src="index.js"></script>
+        <script defer src="login.js"></script>
+        <script defer src="ws.js"></script>
+        <script defer src="browse.js"></script>
     </head>
     <body class="container text-white bg-dark bg-gradient">
         <header class="row container">
@@ -123,7 +124,7 @@
                     <button class="btn btn-dark">Go to saved</button>
                 </a>
                 <div class="col">
-                  <button class="btn btn-dark" id="save-command-btn" type="submit">Save command</button>
+                  <button class="btn btn-dark" id="back-to-repl-btn" type="submit">To REPL</button>
                 </div>
             </div>
             <div class="row">
