fixed link, removed extraneous button

--- a/public/saved.html
+++ b/public/saved.html
@@ -120,12 +120,9 @@
         </main>
         <footer class="row container">
             <div class="row">
-                <a class="col" href="saved.html">
-                    <button class="btn btn-dark">Go to saved</button>
+                <a class="col" href="index.html">
+                    <button class="btn btn-dark">Go to Repl</button>
                 </a>
-                <div class="col">
-                  <button class="btn btn-dark" id="back-to-repl-btn" type="submit">To REPL</button>
-                </div>
             </div>
             <div class="row">
                 <p class="col">Author: Lars Tracy</p>
