--- a/public/saved.html
+++ b/public/saved.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script defer src="login.js"></script>
-        <script defer src="ws.js"></script>
+        <script defer type="module" src="ws.mjs"></script>
         <script defer src="browse.js"></script>
     </head>
     <body class="container text-white bg-dark bg-gradient">
@@ -30,7 +30,7 @@
                     </figure>
                     <figure class="col container">
                         <figcaption>
-                            <label class="form-label" id="websocket-zone" for="login-btn">&ZeroWidthSpace;Sign in to save commands and see WebSocket stuff</label>
+                            <label class="form-label" id="websocket-zone" for="login-btn">&ZeroWidthSpace;Sign in to participate in WebSocket fun</label>
                         </figcaption>
                         <button class="col btn btn-dark" id="login-btn" type="submit">Sign In</button>
                         <button class="col btn btn-dark" id="new-user-btn" type="submit">Create Account</button>
